--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
     <head>
         <meta charset="utf-8">
         <title>Functions</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
         <script src="js/main.js" charset="utf-8"></script>
         <link rel="stylesheet" href="css/main.min.css">
     </head>
     <body>
+        <main>
 
+            <div id="canvas-wrapper"></div>
+            <div id="ui-wrapper">
+                <div class="functions">
+                    <div class="function">
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                    </div>
+                    <div class="function">
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                    </div>
+                </div>
+                <div class="tools">
+                    <div class="row">
+                        <div class="tool" data-tool="forward"></div>
+                        <div class="tool" data-tool="left"></div>
+                        <div class="tool" data-tool="right"></div>
+                        <div class="tool" data-tool="paint"></div>
+                        <div class="tool" data-tool="f1"></div>
+                        <div class="tool" data-tool="f2"></div>
+                    </div>
+                    <div class="row">
+                        <div class="color" data-color="green">g</div>
+                        <div class="color" data-color="blue">b</div>
+                        <div class="color" data-color="orange">o</div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
