--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
             <div id="canvas-wrapper"></div>
             <div id="ui-wrapper">
+                <div class="timeline"></div>
                 <div class="functions">
                     <div class="function">
                         <div class="step"></div>
@@ -29,6 +30,9 @@
                 </div>
                 <div class="tools">
                     <div class="row">
+                        <div class="action" data-action="play">play</div>
+                    </div>
+                    <div class="row">
                         <div class="tool" data-tool="forward"></div>
                         <div class="tool" data-tool="left"></div>
                         <div class="tool" data-tool="right"></div>
@@ -37,9 +41,9 @@
                         <div class="tool" data-tool="f2"></div>
                     </div>
                     <div class="row">
-                        <div class="color" data-color="green">g</div>
-                        <div class="color" data-color="blue">b</div>
-                        <div class="color" data-color="orange">o</div>
+                        <div class="color" data-color="1">g</div>
+                        <div class="color" data-color="2">b</div>
+                        <div class="color" data-color="3">o</div>
                     </div>
                 </div>
             </div>
