--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <div class="tool" data-tool="f2"></div>
                     </div>
                     <div class="row">
-                        <div class="color" data-color="1">g</div>
-                        <div class="color" data-color="2">b</div>
-                        <div class="color" data-color="3">o</div>
+                        <div class="color" data-color="1"></div>
+                        <div class="color" data-color="2"></div>
+                        <div class="color" data-color="3"></div>
                     </div>
                 </div>
             </div>
