Dynamic functions, tools and colors

--- a/index.html
+++ b/index.html
@@ -14,36 +14,10 @@
             <div id="canvas-wrapper"></div>
             <div id="ui-wrapper">
                 <div class="timeline"></div>
-                <div class="functions">
-                    <div class="function">
-                        <div class="step"></div>
-                        <div class="step"></div>
-                        <div class="step"></div>
-                        <div class="step"></div>
-                        <div class="step"></div>
-                    </div>
-                    <div class="function">
-                        <div class="step"></div>
-                        <div class="step"></div>
-                        <div class="step"></div>
-                    </div>
-                </div>
+                <div class="functions"></div>
                 <div class="tools">
                     <div class="row">
                         <div class="action" data-action="play">play</div>
-                    </div>
-                    <div class="row">
-                        <div class="tool" data-tool="forward"></div>
-                        <div class="tool" data-tool="left"></div>
-                        <div class="tool" data-tool="right"></div>
-                        <div class="tool" data-tool="paint"></div>
-                        <div class="tool" data-tool="f1"></div>
-                        <div class="tool" data-tool="f2"></div>
-                    </div>
-                    <div class="row">
-                        <div class="color" data-color="1"></div>
-                        <div class="color" data-color="2"></div>
-                        <div class="color" data-color="3"></div>
                     </div>
                 </div>
             </div>
