Minor UI changes + map background v1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <main>
             <div id="ui-wrapper">
                 <div class="timeline"></div>
-                <div class="functions"></div>
+                <div class="functions-wrap">
+                    <div class="functions"></div>
+                </div>
                 <div class="tools">
                     <div class="row">
                         <div class="action" data-action="play">play</div>
