Major UI update + dark mode

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <body>
         <main>
             <div id="ui-wrapper">
-                <div class="timeline"></div>
                 <div class="functions-wrap">
                     <div class="functions"></div>
                 </div>
                 <div class="tools">
                     <div class="row">
-                        <div class="action" data-action="play">play</div>
+                        <div class="action" data-action="play">►</div>
+                        <div class="action" data-action="stop">◼</div>
                     </div>
                 </div>
+                <div class="timeline"></div>
             </div>
             <div id="canvas-wrapper"></div>
+            <div class="toggle-dark">☀</div>
         </main>
     </body>
 </html>
