--- a/editor/index.html
+++ b/editor/index.html
@@ -26,7 +26,18 @@
                 </div>
                 <div class="timeline"></div>
             </div>
-            <div id="canvas-wrapper"></div>
+            <div id="canvas-wrapper">
+                <div id="editor-tools">
+                    <div class="row">
+                        <div class="tool selected" data-tool="1" data-color="1"></div>
+                        <div class="tool" data-tool="2" data-color="2"></div>
+                        <div class="tool" data-tool="3" data-color="3"></div>
+                        <div class="tool" data-tool="4" data-color="4"></div>
+                        <div class="tool" data-tool="star">Star</div>
+                        <div class="tool" data-tool="hero">Hero</div>
+                    </div>
+                </div>
+            </div>
             <div class="toggle-dark">☀</div>
         </main>
     </body>
