--- a/editor/index.html
+++ b/editor/index.html
@@ -33,6 +33,7 @@
                         <div class="tool" data-tool="2" data-color="2"></div>
                         <div class="tool" data-tool="3" data-color="3"></div>
                         <div class="tool" data-tool="4" data-color="4"></div>
+                        <div class="tool" data-tool="5" data-color="5"></div>
                         <div class="tool" data-tool="star"></div>
                         <div class="tool" data-tool="hero"></div>
                     </div>
