--- a/editor/index.html
+++ b/editor/index.html
@@ -5,8 +5,8 @@
         <title>Functions</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
-        <script src="/js/main.js" charset="utf-8"></script>
-        <link rel="stylesheet" href="/css/main.min.css">
+        <script src="../js/main.js" charset="utf-8"></script>
+        <link rel="stylesheet" href="../css/main.min.css">
     </head>
     <body>
         <script>
