--- a/edit/index.html
+++ b/edit/index.html
@@ -27,7 +27,7 @@
                 <div class="timeline"></div>
             </div>
             <div id="canvas-wrapper">
-                <div id="editor-tools">
+                <div id="edit-tools">
                     <div class="row">
                         <div class="tool selected" data-tool="1" data-color="1"></div>
                         <div class="tool" data-tool="2" data-color="2"></div>
