--- a/edit/index.html
+++ b/edit/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Void</title>
+        <title>Void · Edit</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
         <script src="../js/main.js" charset="utf-8"></script>
         <link rel="stylesheet" href="../css/main.min.css">
+        <link rel="shortcut icon" href="../img/star.png" type="image/png">
     </head>
     <body>
         <script>
