--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
         <script src="./js/main.js" charset="utf-8"></script>
         <link rel="stylesheet" href="./css/main.min.css">
+        <link rel="shortcut icon" href="./img/star.png" type="image/png">
     </head>
     <body>
         <script>
