Brute-force auto-solver

--- a/edit/index.html
+++ b/edit/index.html
@@ -15,6 +15,10 @@
         </script>
         <main>
             <div id="ui-wrapper">
+                <div class="solved-wrap">
+                    <p><span>No way</span> of solving this level</p>
+                    <div class="solved"></div>
+                </div>
                 <div class="functions-wrap">
                     <div class="functions"></div>
                 </div>
