Use a worker for solving

--- a/edit/index.html
+++ b/edit/index.html
@@ -16,7 +16,7 @@
         <main>
             <div id="ui-wrapper">
                 <div class="solved-wrap">
-                    <p><span>No way</span> of solving this level</p>
+                    <p>Solving<span>.</span><span>.</span><span>.</span></p>
                     <div class="solved"></div>
                 </div>
                 <div class="functions-wrap">
